Bring back pre-processing of headlines to avoid flicker.

--- a/assets/css/audacious.scss
+++ b/assets/css/audacious.scss
@@ -73,7 +73,7 @@ table {
 ================================ */
 
 $max-width: 38rem;
-$line-height: 1.45em;
+$line-height: 1.4em;
 
 $sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $serif: $sans, Charter, Georgia, serif;
@@ -317,7 +317,7 @@ code {
 
 .index-date {
 	padding-left: 2.25rem;
-	font-weight: 300; 
+	font-weight: 300;
 	color: $more-faded;
 }
 
